fixed scrolling bug by removing the fluid text animation on the homepage. Then I added overflow-x hidden for html and body to prevent horizontal scrolling

--- a/css/styles.css
+++ b/css/styles.css
@@ -527,6 +527,7 @@ html {
 html,
 body {
     height : 100%;
+    overflow-x: hidden
 }
 
 body {
